package ejercicio2;
import java.util.Random;
import java.util.Scanner;

public class JuegoBatallaNaval{
    // Juego de Batalla Naval
    public static void main(String[] args) {

        Tablero tablero = new Tablero();
        Juego juego = new Juego();
    }

}