package ejercicio2;

public class Jugador {
    private String nombre;
    private int[] intento;

    public Jugador(String nombre, int[] intento) {
        this.nombre = nombre;
        this.intento = intento;
    }

    public String getNombre() {
        return nombre;
    }

    public int[] getIntento() {
        return intento;
    }


}
